--- a/DiegoG.AutoUpdater/DiegoG.AutoUpdater.csproj
+++ b/DiegoG.AutoUpdater/DiegoG.AutoUpdater.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CliWrap" Version="3.6.4" />
     <PackageReference Include="Octokit" Version="7.0.1" />
     <PackageReference Include="Serilog" Version="3.0.1" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
